# bill-bapu

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN_SYSTEM.md  DEVELOPMENT_ROADMAP.md  PROJECT_BLUEPRINT.md  README.md  clippy.toml  docker-compose.yml  eslint.config.js  justfile  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 001_initial_schema.sql
apps/desktop/src-tauri/src/: lib.rs
apps/server/: Cargo.toml  README.md
apps/server/src/: main.rs
apps/server/src/config/: mod.rs
apps/server/src/middleware/: mod.rs
apps/server/src/migrations/: m20250101_000001_create_tenants_and_plans.rs  m20250101_000002_create_outlets.rs  m20250101_000003_create_users_and_roles.rs  m20250101_000004_create_menu.rs  m20250101_000005_create_tables_and_floors.rs  m20250101_000006_create_orders.rs  m20250101_000007_create_billing.rs  m20250101_000008_create_inventory.rs  m20250101_000009_create_report_indexes.rs  mod.rs
apps/server/src/models/: mod.rs
apps/server/src/routes/: health.rs  mod.rs
apps/server/src/services/: mod.rs
apps/server/src/utils/: errors.rs
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
tools/db-seed/: Cargo.toml
tools/db-seed/src/: main.rs
tools/db-seed/src/entities/: floors.rs  menu_categories.rs  menu_items.rs  menu_variants.rs  mod.rs  outlets.rs  plans.rs  restaurant_tables.rs  roles.rs  tenants.rs  user_roles.rs  users.rs
