[workspace]
resolver = "2"
members = [
    "apps/server",
    "packages/core",
    "tools/db-seed",
]
exclude = [
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Proprietary"
repository = "https://github.com/mrkakadiya1603/bill-bapu"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sea-orm = { version = "1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json", "with-rust_decimal"] }
sea-orm-migration = { version = "1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls"] }
rusqlite = { version = "0.33", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"

# Decimal precision
rust_decimal = { version = "1", features = ["serde"] }

# Type sharing
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl", "uuid-impl"] }

# Testing
tokio-test = "0.4"
