[package]
name = "restrosync-seed"
version.workspace = true
edition.workspace = true

[[bin]]
name = "seed"
path = "src/main.rs"

[dependencies]
restrosync-core = { path = "../../packages/core" }
tokio = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
